--- a/src/component-styles/Edit_img_page.scss
+++ b/src/component-styles/Edit_img_page.scss
@@ -300,7 +300,7 @@ h3 {
 .display-live-portrait {
   z-index: 450;
   padding: 5rem 0;
-  // display: none;
+  display: none;
 
   #live-portrait-wrapper {
     background: url('../images/glitter.png');
