--- a/src/component-styles/CTA_section.scss
+++ b/src/component-styles/CTA_section.scss
@@ -20,3 +20,27 @@
     margin: 20px auto;
   }
 }
+
+@media screen and (max-width: 1100px) {
+  #cta-section {
+    padding: 35px 30px;
+    margin: 20px 10px 60px;
+    p {
+      padding: 0 50px;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #cta-section {
+    padding: 35px 5px;
+    margin: 20px 15px 60px;
+    p {
+      padding: 0 20px;
+    }
+  }
+
+  .cta-button {
+    min-width: 80vw;
+  }
+}
