--- a/src/component-styles/Hero.scss
+++ b/src/component-styles/Hero.scss
@@ -55,3 +55,54 @@
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: var(--text-color);
 }
+
+@media screen and (max-width: 1100px) {
+  #hero-heading {
+    font-size: 3rem;
+    margin: 4.5rem auto 5.5rem;
+  }
+
+  .hero-content {
+    height: 100%;
+    text-align: center;
+    display: block;
+    // flex-direction: column;
+    // gap: 20px;
+    padding: 120px 20px;
+    justify-content: space-between;
+  } 
+
+  #hero-section {
+    height: 100vh;
+
+    .btns {
+      width: 60%;
+    }
+  }
+  
+}
+
+
+@media screen and (max-width: 600px) {
+  #hero-heading {
+    font-size: 2.5rem;
+    margin: 3rem auto 5rem;
+  }
+
+  .hero-content {
+    height: 100%;
+    text-align: center;
+    display: block;
+    padding: 120px 20px;
+    justify-content: space-between;
+  } 
+
+  #hero-section {
+    height: 100vh;
+
+    .btns {
+      width: 80%;
+    }
+  }
+  
+}
