Refactor responsive styles and fix scroll behavior
- Refactored the styles in Edit_img_page.scss and Footer.scss to make the site responsive for screens with a maximum width of 1100px.
- Fixed the scroll behavior in Back_to_top.jsx to scroll smoothly to the top of the page.

--- a/src/component-styles/Footer.scss
+++ b/src/component-styles/Footer.scss
@@ -14,3 +14,13 @@ footer {
     color: var(--faint-text);
   }
 }
+
+@media screen and (max-width: 1100px) {
+  footer {
+    padding: 40px 20px;
+    
+    p {
+      font-size: .75rem
+    }
+  }
+}
